@@ -171,8 +171,10 @@
                     <argLine>
                         --add-opens java.base/java.lang=ALL-UNNAMED
                         --add-opens java.base/java.io=ALL-UNNAMED
+                        --add-opens=java.base/java.nio=ALL-UNNAMED
                         --add-opens java.base/java.util=ALL-UNNAMED
                         --add-opens java.base/java.lang.reflect=ALL-UNNAMED
+                        --add-opens=java.rmi/java.rmi=ALL-UNNAMED
                         --add-opens=java.rmi/sun.rmi.transport=ALL-UNNAMED
                     </argLine>
                 </configuration>
